# rgbd_rtk

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigFile.yaml  LICENSE  README.md  newCmakelist  rgbd_rtkConfig.cmake.in  setup.sh
applications/: CMakeLists.txt  Makefile  dynamic_image_dnn_segmentation.cpp  event_logger_test.cpp  feature_map_tracker_test.cpp  flexible_feature_detector_test.cpp  flexible_feature_tracker_test.cpp  hybrid_cloud_filter_test.cpp  hybrid_optical_flow_visual_odometry_test.cpp  icp_odometry_test.cpp  kinect_grabber.cpp  kitti_cloud_generator_test.cpp  kitti_loader_test.cpp  kitti_loading_test.cpp  kitti_odometry_improvements_test.cpp  kitti_velodyne_loader_test.cpp  klt_tracker_test.cpp  kltatcw_tracker_test.cpp  kltcw_tracker_test.cpp  kltqt_tracker_test.cpp  klttacw_tracker_test.cpp  klttcw_tracker_test.cpp  klttw_tracker_test.cpp  marker_finder_test.cpp  monocular_calibration.cpp  monocular_image_grabber.cpp  motion_estimator_icp_test.cpp  motion_estimator_surf_test.cpp  motion_estimator_test.cpp  motion_geometric_and_dnn_segmentation.cpp  motion_geometric_segmentation.cpp  motion_image_dnn_segmentation.cpp  motion_image_geometric_and_dnn_segmentation.cpp  motion_image_geometric_segmentation.cpp  openfab_map_memory_test.cpp  optical_flow_visual_odometry_test.cpp  quadtree_test.cpp  reconstruction_visualizer_test.cpp  rgbd_loader_test.cpp  sequence_loader_test.cpp  (+15 more)
cmake/: FindG2O.cmake  Findaruco.cmake  FindopenFABMAP.cmake
common/: CMakeLists.txt  common_types.h  constants.h.in  event_logger.cpp  event_logger.h  geometry.cpp  geometry.h  kitti_cloud_generator.cpp  kitti_cloud_generator.h
config_files/: aruco_poses.txt  aruco_poses_coffee.txt  calib_cam_to_cam.yaml  image_segmentation.yaml  kinect_default.yaml  kitti_odometry.yaml  marker_detection.yaml  slam_solver.yaml  smart_marker_detection.yaml  test.yaml  tum_odometry.yaml  tum_of_odometry.yaml  tum_wb_odometry.yaml
experiment/: RPE.hpp
experiments/: comousar.txt
experiments/gerar_experimento_ICP/: icp_experimento.sh  main.cpp  run
experiments/gerar_experimento_klttw/: klttcv_experimento.cpp  klttw_experimento  klttw_experimento.cpp  klttw_experimento.sh
experiments/media/: media  media.cpp
feature_surf/: CMakeLists.txt  feature_surf.h  surf_detector.cpp  surf_detector.h
flexible_feature_detector/: CMakeLists.txt  feature_surf.h  flexible_feature_detector.cpp  flexible_feature_detector.h
io/: CMakeLists.txt  Makefile  cmake_install.cmake  config_loader.cpp  config_loader.h  kitti_stereo_loader.cpp  kitti_stereo_loader.h  kitti_velodyne_loader.cpp  kitti_velodyne_loader.h  rgbd_loader.cpp  rgbd_loader.h  sequence_loader.cpp  sequence_loader.h  velodyne_loader.cpp  velodyne_loader.h
io/lib/: librgbd_rtk_io.so.1.0
motion_estimation/: CMakeLists.txt  Makefile  cmake_install.cmake  motion_estimator_icp.cpp  motion_estimator_icp.h  motion_estimator_ransac.cpp  motion_estimator_ransac.h
motion_segmentation/: CMakeLists.txt  dnn_motion_segmenter.cpp  dnn_motion_segmenter.h  factory_motion_segmenter.h  motion_segmenter.cpp  motion_segmenter.h
motion_segmentation/dnn/: dnn_motion_segmenter.cpp  dnn_motion_segmenter.h
motion_segmentation/geometric/: geometric_motion_segmenter.cpp  geometric_motion_segmenter.h
quadtree/: CMakeLists.txt  QuadTree.cpp  QuadTree.h  quad_tree.cpp  quad_tree.h
segmentation/: CMakeLists.txt  dnn_based_ms.cpp  dnn_based_ms.h  dnn_based_mt.cpp  dnn_based_mt.h  factory_motion_segmenter.h  feature_based_mt.cpp  feature_based_mt.h  mask_rcnn_classes.h  mask_rcnn_dnn_ms.cpp  mask_rcnn_dnn_ms.h  mask_rcnn_dnn_mt.cpp  mask_rcnn_dnn_mt.h  motion_segmenter.h  motion_treater.h  object_detected.h  score_fbmt.cpp  scored_fbmt.h  scored_mask_rcnnmt.cpp  scored_mask_rcnnmt.h
slam/: CMakeLists.txt  marker_finder.cpp  marker_finder.h  pose_graph_slam.cpp  pose_graph_slam.h  single_marker_slam.cpp  single_marker_slam.h  slam_solver.cpp  slam_solver.h
stereo/: CMakeLists.txt  stereo_cloud_generator.cpp  stereo_cloud_generator.h
surf_memory/: CMakeLists.txt
tracking/: CMakeLists.txt  Makefile  cmake_install.cmake  feature_map_tracker.cpp  feature_map_tracker.h  feature_tracker.cpp  feature_tracker.h  flexible_feature_detector.cpp  flexible_feature_detector.h  flexible_feature_tracker.cpp  flexible_feature_tracker.h  graph.cpp  graph.h  klt_tracker.cpp  klt_tracker.h  kltatcw_tracker.cpp  kltatcw_tracker.h  kltcw_tracker.cpp  kltcw_tracker.h  kltqt_tracker.cpp  kltqt_tracker.h  klttacw_tracker.cpp  klttacw_tracker.h  klttacw_tracker_test.cpp  klttcw_tracker.cpp  klttcw_tracker.h  klttw_tracker.cpp  klttw_tracker.h  surf_tracker.cpp  surf_tracker.h  wide_baseline_tracker.cpp  wide_baseline_tracker.h
visual_memory/: CMakeLists.txt  visual_memory.cpp  visual_memory.h
visual_memory/fabMap/: fabmap_memory.cpp  fabmap_memory.h
visual_odometry/: CMakeLists.txt  hybrid_optical_flow_visual_odometry.cpp  hybrid_optical_flow_visual_odometry.h  icp_odometry.cpp  icp_odometry.h  optical_flow_visual_odometry.cpp  optical_flow_visual_odometry.h  stereo_optical_flow_visual_odometry.cpp  stereo_optical_flow_visual_odometry.h  visual_odometry.cpp  visual_odometry.h  wide_baseline_odometry.h  wide_baseline_visual_odometry.cpp  wide_baseline_visual_odometry.h
visualization/: CMakeLists.txt  reconstruction_visualizer.cpp  reconstruction_visualizer.h
